# LocalVQE

./: .gitignore  CITATION.cff  README.md  flake.nix
.github/workflows/: build-windows.yml  cmake-assets.yml  cmake-build-assets.yml  cmake-multi-platform.yml  cmake-windows.yml  pages.yml
demo/: .gitignore  README.md  aec_sweep.py  bench_pi.sh  gen_assets.py  make.sh  requirements.txt
demo/traces/pi/: engine.json  meta.json
ggml/: .dockerignore  CMakeLists.txt  daf_cli.cpp  daf_frontend.cpp  daf_frontend.h  localvqe.cpp  localvqe_api.cpp  localvqe_api.h  localvqe_graph.cpp  localvqe_graph.h  localvqe_model.h  model_hash.cpp  native_engine.cpp  native_engine.h  native_test.cpp  render_blind_v14.sh  tap_debug.cpp
ggml/docker/: Dockerfile.arm64
ggml/fuzz/: fuzz_native.cpp
ggml/gtcrn/: gtcrn.cpp  gtcrn.h  gtcrn_ggml.cpp  test_gtcrn.cpp
ggml/patches/: README.md  ggml-gru.patch
ggml/scripts/: apply_ggml_patches.sh
ggml/tests/: regenerate_fixtures.py  test_regression.cpp
ggml/tests/fixtures/: localvqe-v1.1-1.3M-f32.out.f32  localvqe-v1.2-1.3M-f32.out.f32  localvqe-v1.4-aec-2.7K-f32.out.f32  localvqe-v1.4-aec-2.7K-f32.prime.out.f32  localvqe-v1.4-aec-200K-bf16.out.f32  localvqe-v1.4-aec-200K-f32.out.f32  localvqe-v1.4-aec-200K-native-bf16.out.f32  localvqe-v1.4-aec-200K-native-f32.out.f32  regression_input_prime.f32
ggml/tests/gtcrn/: dec0.npy  dec1.npy  dec2.npy  dec3.npy  dec4.npy  dpgrnn1.npy  dpgrnn2.npy  enc0.npy  enc1.npy  enc2.npy  enc3.npy  enc4.npy  feat.npy  gtcrn_aec.gguf  in_spec_e.npy  in_spec_y.npy  istft_out.npy  mask.npy  out_spec.npy  stft_in.npy  stft_out.npy
obs-plugin/: CMakeLists.txt
obs-plugin/data/locale/: en-US.ini
obs-plugin/src/: localvqe-filter.c
web/: README.md  app.js  browser_test.mjs  build-wasm.sh  index.html  serve.bun.js  serve.py  smoke_test.mjs  style.css  worker.js
